tests/dataset/tpc-ds/compiler/c/q26.error
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:232:3: error: unknown type name ‘customer_demo_t’
  232 |   customer_demo_t *data;
      |   ^~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c: In function ‘create_customer_demo_list’:
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:237:31: error: ‘customer_demo_t’ undeclared (first use in this function); did you mean ‘CustomerDemo’?
  237 |   l.data = calloc(len, sizeof(customer_demo_t));
      |                               ^~~~~~~~~~~~~~~
      |                               CustomerDemo
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:237:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c: In function ‘test_TPCDS_Q26_demographic_averages’:
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:312:61: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  312 |   if (test_TPCDS_Q26_demographic_averages_result.len != tmp1.len) {
      |                                                             ^
      |                                                             ->
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:318:15: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  318 |           tmp1.data[i3]) {
      |               ^
      |               ->
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:379:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  379 |     _json_string(it.i_item_id);
      |                  ~~^~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq263847292954/001/prog.c:399:48: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  399 |   test_TPCDS_Q26_demographic_averages_result = result;
      |                                                ^~~~~~
